--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "dev": "nodemon --exec ts-node app.ts"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   }
